--- a/config/longrun_configs/longrun_compressible_edmf_trmm.yml
+++ b/config/longrun_configs/longrun_compressible_edmf_trmm.yml
@@ -1,4 +1,3 @@
-
 config: "column" 
 FLOAT_TYPE: "Float64" 
 hyperdiff: "false" 
@@ -12,7 +11,7 @@ z_elem: 90
 z_stretch: false 
 z_max: 17000 
 rayleigh_sponge: true 
-zd_rayleigh: 15000 
 job_id: "longrun_compressible_edmf_trmm" 
 dt: "0.2secs" 
 t_end: "3.8hours"
+toml: [longrun_compressible_edmf_trmm.toml]
