--- a/config/model_configs/plane_agnesi_mountain_test_stretched.yml
+++ b/config/model_configs/plane_agnesi_mountain_test_stretched.yml
@@ -11,7 +11,7 @@ dz_bottom: 200.0
 use_reference_state: false
 config: "plane"
 kappa_4: 1.0e6
-alpha_rayleigh_w: 0.1
 z_max: 25000.0
 topography: "Agnesi"
 job_id: "plane_agnesi_mountain_test_stretched"
+toml: [toml/plane_agnesi_mountain_test_stretched.toml]
