--- a/config/model_configs/plane_schar_mountain_test_uniform.yml
+++ b/config/model_configs/plane_schar_mountain_test_uniform.yml
@@ -11,7 +11,7 @@ use_reference_state: false
 ode_algo: "SSP33ShuOsher"
 config: "plane"
 kappa_4: 5.0e7
-alpha_rayleigh_w: 0.1
 z_max: 25000.0
 topography: "Schar"
 job_id: "plane_schar_mountain_test_uniform"
+toml: [toml/plane_schar_mountain_test_uniform.toml]
