--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -550,7 +550,7 @@ steps:
 
       - label: ":computer: Exercise remap pipeline"
         key: "remap_pipeline"
-        depends_on: "mpi_baro_wave_make_restart"
+        depends_on: "prep_remap"
         command: >
           julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
           --data_dir prep_remap/ --out_dir remap_pipeline_output
@@ -558,7 +558,7 @@ steps:
 
       - label: ":computer: Exercise parallel remap pipeline"
         key: "parallel_remap_pipeline"
-        depends_on: "mpi_baro_wave_make_restart"
+        depends_on: "remap_pipeline"
         command: >
           julia -p 4 --color=yes --project=examples post_processing/remap/remap_pipeline_parallel.jl
           --data_dir prep_remap/ --out_dir parallel_remap_pipeline_output
