--- a/Project.toml
+++ b/Project.toml
@@ -80,7 +80,7 @@ StaticArrays = "1"
 StatsBase = "0.33"
 SurfaceFluxes = "0.6"
 TerminalLoggers = "0.1"
-Thermodynamics = "0.10"
+Thermodynamics = "0.10, 0.11"
 YAML = "0.4"
 julia = "1.7"
 
