--- a/Project.toml
+++ b/Project.toml
@@ -56,7 +56,7 @@ CUDA = "4"
 ClimaComms = "0.5"
 ClimaCore = "0.10"
 ClimaTimeSteppers = "0.7"
-CloudMicrophysics = "0.10"
+CloudMicrophysics = "0.10, 0.13"
 Colors = "0.12"
 Dierckx = "0.5"
 DiffEqBase = "6"
