--- a/Project.toml
+++ b/Project.toml
@@ -78,7 +78,7 @@ RRTMGP = "0.9"
 RootSolvers = "0.2, 0.3"
 StaticArrays = "1"
 StatsBase = "0.33"
-SurfaceFluxes = "0.6"
+SurfaceFluxes = "0.6, 0.7"
 TerminalLoggers = "0.1"
 Thermodynamics = "0.10"
 YAML = "0.4"
