make failing EDMFX job soft fail

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -632,6 +632,7 @@ steps:
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/diagnostic_edmfx_aquaplanet_tke.yml
         artifact_paths: "diagnostic_edmfx_aquaplanet_tke/*"
+        soft_fail: true
         agents:
           slurm_mem: 20GB
 
