--- a/config/model_configs/diagnostic_edmfx_bomex_stretched_box.yml
+++ b/config/model_configs/diagnostic_edmfx_bomex_stretched_box.yml
@@ -8,7 +8,8 @@ surface_setup: "Bomex"
 turbconv: "diagnostic_edmfx" 
 prognostic_tke: true
 edmfx_upwinding: "first_order" 
-edmfx_entr_detr: true 
+edmfx_entr_model: "ConstantTimescale" 
+edmfx_detr_model: "ConstantCoefficient" 
 edmfx_nh_pressure: true 
 edmfx_sgs_flux: true
 moist: "equil"
