--- a/config/model_configs/diagnostic_edmfx_trmm_box.yml
+++ b/config/model_configs/diagnostic_edmfx_trmm_box.yml
@@ -6,7 +6,8 @@ surface_setup: TRMM_LBA
 turbconv: diagnostic_edmfx
 prognostic_tke: true
 edmfx_upwinding: first_order
-edmfx_entr_detr: true
+edmfx_entr_model: "ConstantTimescale" 
+edmfx_detr_model: "ConstantCoefficient" 
 edmfx_nh_pressure: true
 edmfx_sgs_flux: true
 moist: equil
