--- a/config/model_configs/sphere_baroclinic_wave_rhoe_equilmoist_edmfx.yml
+++ b/config/model_configs/sphere_baroclinic_wave_rhoe_equilmoist_edmfx.yml
@@ -1,7 +1,8 @@
 dt_save_to_disk: "30secs"
 initial_condition: "MoistBaroclinicWaveWithEDMF"
 dt: "1secs"
-edmfx_entr_detr: true
+edmfx_entr_model: "ConstantCoefficient" 
+edmfx_detr_model: "ConstantCoefficient" 
 t_end: "6mins"
 turbconv: "edmfx"
 ode_algo: "SSP33ShuOsher"
